src/styles.css
body {
  font-family: "Poppins", sans-serif;
  background: #272044;
}

.container {
  max-width: 1400px;
  margin: 0 auto;
}

.text-center {
  text-align: center;
}

.grid {
  display: grid;
  grid-gap: 64px;
}

.grid-2-columns {
  grid-template-columns: 1fr 1fr;
}

.grid-3-columns-narrow {
  grid-template-columns: 1fr 2fr 2fr;
}

.grid-3-columns {
  grid-template-columns: 1fr 1fr 1fr;
}

.embed {
  width: 100%;
  aspect-ratio: 1/1;
}

.img-responsive {
  width: 100%;
  display: block;
  aspect-ratio: 1/1;
}

.card {
  background: white;
  margin: 30px 0;
}

.card-header.grid {
  grid-gap: 0;
}

.card-body {
  padding: 30px;
}

.card-footer {
  padding: 15px 32px;
}

.btn {
  display: block;
  color: white;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.5;
  text-align: center;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 16px;
  background-color: #462cb2;
  text-decoration: none;
}

.wrapper {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  grid-gap: 20px;
  margin-top: 30px;
}

.border {
  border-radius: 8px;
}

section {
  margin: 0 auto;
  padding: 100px;
}

section.secondary {
  background-color: #f8f8f8;
}

section.photos {
  padding: 80px;
}

header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)),
    url("../images/lake-louise.png");
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  text-align: center;
  padding: 200px 0;
}

header h1 {
  font-weight: 700;
  font-size: 96px;
  line-height: 1;
  margin: 30px 0;
}

header h2 {
  font-weight: 400;
  font-size: 40px;
  line-height: 1.5;
  margin: 0;
}

header h3 {
  font-weight: 900;
  font-size: 24px;
  line-height: 1.5;
  letter-spacing: 5px;
  margin: 0;
}

header a {
  font-weight: 700;
  font-size: 14px;
  line-height: 1.5;
  text-align: center;
  letter-spacing: 3px;
  text-transform: uppercase;
  background: white;
  text-decoration: none;
  color: #272044;
  padding: 16px 32px;
  display: inline-block;
  margin-top: 32px;
}

main {
  background-color: white;
}

main h2 {
  font-size: 16px;
  font-weight: 700;
  line-height: 1.5;
  letter-spacing: 5px;
  color: #272044;
  opacity: 0.3;
  text-transform: uppercase;
  margin: 0;
}

main h3 {
  font-weight: 700;
  font-size: 40px;
  line-height: 1.5;
  color: #272044;
  margin: 0;
}

main h4 {
  font-weight: 700;
  font-size: 24px;
  line-height: 1;
  color: #272044;
  margin: 0;
}

main h5 {
  font-weight: 700;
  font-size: 13px;
  line-height: 1.5;
  color: #272044;
  margin: 0;
}

main p {
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  color: #272044;
  opacity: 0.7;
}

footer {
  color: white;
  background-image: linear-gradient(
      rgba(39, 32, 68, 0.9),
      rgba(39, 32, 68, 0.9)
    ),
    url(../images/banff-town.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  padding: 80px 0;
}

footer h3 {
  font-weight: 700;
  font-size: 20px;
  line-height: 30px;
}

footer p {
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  opacity: 0.9;
}

footer ul {
  padding: 0;
}

footer li {
  list-style: none;
  margin: 0;
  padding: 0;
}

footer a {
  color: white;
  opacity: 0.7;
}

@media (max-width: 960px) {
  header {
    padding: 60px 0;
  }

  h1 {
    font-size: 48px;
  }

  h2 {
    font-size: 20px;
  }

  h3 {
    font-size: 12px;
  }

  .grid {
    grid-template-columns: 1fr;
    grid-gap: 32px;
  }

  .img-responsive {
    width: 100%;
  }

  section {
    padding: 30px;
  }

  .card-header img {
    display: none;
  }

  .embed {
    aspect-ratio: 16/9;
  }

  .wrapper {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    grid-gap: 10px;
    aspect-ratio: 1/1;
  }
}

